--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
     "mcaddon"
   ],
   "editor.tabSize": 2,
-  "eslint.experimental.useFlatConfig": true
+  "eslint.experimental.useFlatConfig": true,
+  "commentTranslate.targetLanguage": "zh-CN"
 }
