feat(version): 兼容1.21.90

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
     "@minecraft/math": "^1.4.0",
-    "@minecraft/server": "2.0.0-beta.1.21.70-stable",
-    "@minecraft/server-net": "1.0.0-beta.1.21.70-stable",
-    "@minecraft/server-ui": "2.0.0-beta.1.21.70-stable",
-    "@minecraft/vanilla-data": "1.21.70",
+    "@minecraft/server": "2.1.0-beta.1.21.90-preview.21",
+    "@minecraft/server-net": "1.0.0-beta.1.21.90-preview.21",
+    "@minecraft/server-ui": "2.1.0-beta.1.21.90-preview.21",
+    "@minecraft/vanilla-data": "1.21.90-preview.20",
     "archiver": "^6.0.1",
     "esm": "^3.2.25",
     "gulp-changed": "^5.0.2",
