--- a/behavior_packs/RefusedBadBoySM/manifest.json
+++ b/behavior_packs/RefusedBadBoySM/manifest.json
@@ -30,6 +30,10 @@
     {
       "module_name": "@minecraft/server-ui",
       "version": "2.0.0-beta"
+    },
+    {
+      "module_name": "@minecraft/server-net",
+      "version": "2.0.0-beta"
     }
   ]
 }
