chore: 更新.gitignore和tsconfig.json配置
- 在.gitignore中添加lib目录以忽略构建输出
- 在tsconfig.json中添加lib选项以支持ES2017和DOM库

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": "behavior_packs/",
     "listFiles": false,
     "noEmitHelpers": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": ["es2017", "dom"]
   },
   "include": [
     "scripts/**/*"
