chore: 在package.json中添加删除服务器UI模块的命令
- 新增命令 `delServerUiNodeModules` 用于删除服务器UI模块中的node_modules目录，以便于清理和维护项目依赖。

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "local-deploy": "just-scripts local-deploy",
     "mcaddon": "just-scripts mcaddon",
     "enablemcloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-1958404141-86561845-1752920682-3514627264-368642714-62675701-733520436",
-    "enablemcpreviewloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-424268864-5579737-879501358-346833251-474568803-887069379-4040235476"
+    "enablemcpreviewloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-424268864-5579737-879501358-346833251-474568803-887069379-4040235476",
+    "delServerUiNodeModules": "rmdir /s /q node_modules\\@minecraft\\server-ui\\node_modules"
   },
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
