--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
     "@minecraft/math": "^1.4.0",
-    "@minecraft/server": "2.1.0-beta.1.21.80-preview.22",
-    "@minecraft/server-net": "1.0.0-beta.1.21.80-stable",
-    "@minecraft/server-ui": "2.1.0-beta.1.21.80-preview.22",
-    "@minecraft/vanilla-data": "1.21.80",
+    "@minecraft/server": "2.1.0-beta.1.21.90-stable",
+    "@minecraft/server-net": "1.0.0-beta.1.21.90-stable",
+    "@minecraft/server-ui": "2.1.0-beta.1.21.90-stable",
+    "@minecraft/vanilla-data": "1.21.90",
     "archiver": "^6.0.1",
     "esm": "^3.2.25",
     "gulp-changed": "^5.0.2",
