--- a/behavior_packs/RefusedBadBoySM/manifest.json
+++ b/behavior_packs/RefusedBadBoySM/manifest.json
@@ -25,11 +25,11 @@
   "dependencies": [
     {
       "module_name": "@minecraft/server",
-      "version": "2.3.0-beta"
+      "version": "beta"
     },
     {
       "module_name": "@minecraft/server-ui",
-      "version": "2.1.0-beta"
+      "version": "beta"
     }
   ]
 }
