--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "refusedbadboysm",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "productName": "杜绝熊孩服务器插件",
   "description": "杜绝熊孩服务器插件",
   "private": true,
   "devDependencies": {
-    "@minecraft/core-build-tasks": "^1.1.3",
-    "eslint-plugin-minecraft-linting": "^1.2.2",
+    "@minecraft/core-build-tasks": "^5.5.0",
+    "eslint-plugin-minecraft-linting": "^2.0.10",
     "source-map": "^0.7.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.5.4",
@@ -15,20 +15,21 @@
   "scripts": {
     "lint": "just-scripts lint",
     "build": "just-scripts build",
+    "build:production": "just-scripts build --production",
     "clean": "just-scripts clean",
     "local-deploy": "just-scripts local-deploy",
     "mcaddon": "just-scripts mcaddon",
+    "mcaddon:production": "just-scripts mcaddon --production",
     "enablemcloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-1958404141-86561845-1752920682-3514627264-368642714-62675701-733520436",
-    "enablemcpreviewloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-424268864-5579737-879501358-346833251-474568803-887069379-4040235476",
-    "delServerUiNodeModules": "rmdir /s /q node_modules\\@minecraft\\server-ui\\node_modules"
+    "enablemcpreviewloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-424268864-5579737-879501358-346833251-474568803-887069379-4040235476"
   },
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
     "@minecraft/math": "^1.5.2",
-    "@minecraft/server": "2.3.0-beta.1.21.111-stable",
-    "@minecraft/server-net": "1.0.0-beta.1.21.111-stable",
-    "@minecraft/server-ui": "2.1.0-beta.1.21.111-stable",
-    "@minecraft/vanilla-data": "1.21.111",
+    "@minecraft/server": "2.4.0-beta.1.21.124-stable",
+    "@minecraft/server-net": "1.0.0-beta.1.21.124-stable",
+    "@minecraft/server-ui": "2.1.0-beta.1.21.124-stable",
+    "@minecraft/vanilla-data": "1.21.124",
     "archiver": "^6.0.1",
     "esm": "^3.2.25",
     "gulp-changed": "^5.0.2",
