--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
     "@minecraft/math": "^1.5.2",
-    "@minecraft/server": "2.5.0-beta.1.21.130-stable",
-    "@minecraft/server-net": "1.0.0-beta.1.21.130-stable",
-    "@minecraft/server-ui": "2.1.0-beta.1.21.130-stable",
-    "@minecraft/vanilla-data": "1.21.130",
+    "@minecraft/server": "2.6.0-beta.1.26.0-preview.25",
+    "@minecraft/server-net": "1.0.0-beta.1.26.0-preview.25",
+    "@minecraft/server-ui": "2.1.0-beta.1.26.0-preview.25",
+    "@minecraft/vanilla-data": "1.26.0-preview.25",
     "archiver": "^6.0.1",
     "esm": "^3.2.25",
     "gulp-changed": "^5.0.2",
