--- a/behavior_packs/RefusedBadBoySM/manifest.bds.json
+++ b/behavior_packs/RefusedBadBoySM/manifest.bds.json
@@ -34,6 +34,10 @@
     {
       "module_name": "@minecraft/server-admin",
       "version": "beta"
+    },
+    {
+      "module_name": "@minecraft/server-net",
+      "version": "beta"
     }
   ]
 }
