--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "local-deploy": "just-scripts local-deploy",
     "mcaddon": "just-scripts mcaddon",
     "mcaddon:production": "just-scripts mcaddon --production",
+    "mcaddon:bds": "just-scripts mcaddon:bds",
+    "mcaddon:all": "just-scripts mcaddon:all",
     "enablemcloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-1958404141-86561845-1752920682-3514627264-368642714-62675701-733520436",
     "enablemcpreviewloopback": "CheckNetIsolation.exe LoopbackExempt -a -p=S-1-15-2-424268864-5579737-879501358-346833251-474568803-887069379-4040235476"
   },
   "dependencies": {
     "@mcbe-mods/utils": "^0.1.1",
     "@minecraft/math": "^1.5.2",
-    "@minecraft/server": "2.6.0-beta.1.26.0-preview.25",
-    "@minecraft/server-net": "1.0.0-beta.1.26.0-preview.25",
-    "@minecraft/server-ui": "2.1.0-beta.1.26.0-preview.25",
-    "@minecraft/vanilla-data": "1.26.0-preview.25",
+    "@minecraft/server": "2.6.0-beta.1.26.0-stable",
+    "@minecraft/server-admin": "1.0.0-beta.1.26.0-stable",
+    "@minecraft/server-net": "1.0.0-beta.1.26.0-stable",
+    "@minecraft/server-ui": "2.1.0-beta.1.26.0-stable",
+    "@minecraft/vanilla-data": "1.26.0",
     "archiver": "^6.0.1",
     "esm": "^3.2.25",
     "gulp-changed": "^5.0.2",
